--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -40,6 +40,5 @@ add_custom_command(OUTPUT share/eosio/skeleton/skeleton.cpp
                    VERBATIM)
 add_custom_target(copy_skeleton_contract ALL DEPENDS share/eosio/skeleton/skeleton.cpp)
 
-install(DIRECTORY eosiolib DESTINATION usr/include/eosio)
-install(DIRECTORY skeleton DESTINATION usr/share/eosio)
-install_directory_permissions(DIRECTORY usr/share/eosio)
+install(DIRECTORY skeleton DESTINATION usr/${CMAKE_INSTALL_DATAROOTDIR}/eosio)
+install_directory_permissions(DIRECTORY usr/${CMAKE_INSTALL_DATAROOTDIR}/eosio)
